First commit on intel module

--- a/Malcom/web/templates/base.html
+++ b/Malcom/web/templates/base.html
@@ -72,6 +72,7 @@
             <li id='populate-nav'><a href="{{url_for('populate')}}">Populate</a></li>
             <li id='sniffer-nav'><a href="{{url_for('sniffer')}}">Network captures</a></li>
             <li id='feeds-nav'><a href="{{url_for('feeds')}}">Feeds</a></li>
+            <li id='intel-nav'><a href="{{url_for('malcom_intel.index')}}">Intel</a></li>
             <li id='dataset-nav'><a href="{{url_for('dataset')}}">Browse dataset</a></li>
           </ul>
 
