--- a/Malcom/intel/web/templates/entity_table.html
+++ b/Malcom/intel/web/templates/entity_table.html
@@ -1,6 +1,6 @@
 <table class='table table-condensed table-hover' id='entities'>
 <tr><th>Title</th><th>Type</th></tr>
 {% for e in entities%}
-	<tr><td>{{e.value}}</td><td>{{e.type}}</td></tr>
+	<tr><td>{{e.title}}</td><td>{{e.type}}</td></tr>
 {% endfor %}
 </table>
