Hide timeline tabs for now

--- a/Malcom/web/templates/link_history.html
+++ b/Malcom/web/templates/link_history.html
@@ -5,7 +5,7 @@
 	<div role="tabpanel">
 		<ul id='historyTabs' class='nav nav-tabs' role="tablist">
 			<li role='presentation' class='active'><a href='#table' aria-controls="table" role="tab" data-toggle='tab'>Table</a></li>
-			<li role='presentation'><a href='#timeline' aria-controls="timeline" role="tab" data-toggle='tab'>Timeline</a></li>
+			<!-- <li role='presentation'><a href='#timeline' aria-controls="timeline" role="tab" data-toggle='tab'>Timeline</a></li> -->
 		</ul>
 
 		<div id='historyTabsContent' class='tab-content'>
@@ -30,9 +30,9 @@
 			{%endif%}
 			</div>
 
-			<div role="tabpanel" class='tab-pane' id='timeline'>
+			<!-- <div role="tabpanel" class='tab-pane' id='timeline'>
 			Coming soon...
-			</div>
+			</div> -->
 		</div>
 
 
