Rename link "attribute" to "tag"

--- a/Malcom/web/static/custom_css/style.css
+++ b/Malcom/web/static/custom_css/style.css
@@ -77,8 +77,8 @@ img.ssl-smiley {
 
 /* tags */
 .label {
-	color: white;
-	background-color: #38a;
+	/*color: white;*/
+	/*background-color: #38a;*/
 }
 
 
