--- a/Malcom/web/templates/link_history.html
+++ b/Malcom/web/templates/link_history.html
@@ -13,18 +13,18 @@
 			{%if history|length > 0%}
 				<h4>{{src['value']}} → {{dst['value']}}</h4>
 				<table class='table table-condensed table-hover'>
-					<tr><th>Attribute</th><th>First seen</th><th>Last seen</th></tr>
+					<tr><th>Tag</th><th>First seen</th><th>Last seen</th></tr>
 					{% for h in history%}
-					<tr {% if loop.index0 == 0%} class='active' {%endif%}><td>{{h['attribs']}}</td><td>{{h['first_seen']}}</td><td>{{h['last_seen']}}</td></tr>
+					<tr {% if loop.index0 == 0%} class='active' {%endif%}><td>{{display_malcom('tag', h['tag'])}}</td><td>{{h['first_seen']}}</td><td>{{h['last_seen']}}</td></tr>
 					{%endfor%}
 				</table>
 			{%endif%}
 			{%if rhistory|length > 0%}
 				<h4>{{dst['value']}} → {{src['value']}}</h4>
 				<table class='table table-condensed table-hover'>
-					<tr><th>Attribute</th><th>First seen</th><th>Last seen</th></tr>
+					<tr><th>Tag</th><th>First seen</th><th>Last seen</th></tr>
 					{% for h in rhistory%}
-					<tr {% if loop.index0 == 0%} class='active' {%endif%}><td>{{h['attribs']}}</td><td>{{h['first_seen']}}</td><td>{{h['last_seen']}}</td></tr>
+					<tr {% if loop.index0 == 0%} class='active' {%endif%}><td>{{display_malcom('tag', h['tag'])}}</td><td>{{h['first_seen']}}</td><td>{{h['last_seen']}}</td></tr>
 					{%endfor%}
 				</table>
 			{%endif%}
